kubernetes/headersaas-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: headersaas-deployment
  labels:
    app: headersaas
    version: "1"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: headersaas
  template:
    metadata:
      labels:
        app: headersaas
        version: "1"
    spec:
      containers:
      - name: headersaas
        image: gcr.io/twodarek-talks/headersaas:latest
        # image: thomaswo/headersaas:latest
        ports:
        - containerPort: 8888
