kubernetes/headersrb-with-persistentvolume.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: headersrb
  labels:
    app: headersrb
    version: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: headersrb
  template:
    metadata:
      labels:
        app: headersrb
        version: "1"
    spec:
      containers:
      - name: headersrb
        image: thomaswo/headersrb:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: pv-demo
      volumes:
      - name: pv-demo
        persistentVolumeClaim:
         claimName: pv-claim-demo
