kubernetes/hellopy-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: hellopy
  labels:
    app: hellopy
    version: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hellopy
  template:
    metadata:
      labels:
        app: hellopy
        version: "1"
    spec:
      containers:
      - name: hellopy
        image: gcr.io/twodarek-talks/hellopy:latest
        ports:
        - containerPort: 8888
