kubernetes/headersaas-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headersaas
  labels:
    app: headersaas
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8888
    protocol: TCP
    name: http
  selector:
    app: headersaas
    version: "1"
