kubernetes/headersrb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headersrb
  labels:
    app: headersrb
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: headersrb
    version: "1"
