kubernetes/hellorb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hellorb
  labels:
    app: hellorb
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: hellorb
    version: "1"
